changement du html, css et js

--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
         </div>
 
         <div class="button">
-            <button >Choisir Pod A</button>
-            <button>Choisir Pod B</button>
-            <button>Choisir Pod C</button>
+            <button></button>
         </div>
             
     </div>
