--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
        <div class="checkbox-wrapper-32">
         <input type="checkbox" name="checkbox-32" id="checkbox-32">
         <label for="checkbox-32">
-          Checkbox
+          Mute
         </label>
         <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
           <path d="M 10 10 L 90 90" stroke="#000" stroke-dasharray="113" stroke-dashoffset="113"></path>
