ajout local storage

--- a/index.html
+++ b/index.html
@@ -25,18 +25,22 @@
         <div class="button">
         </div>
        <!-- <div><label for="">Mute</label><input type="checkbox" name="" id="mute" class="checkbox"></div>-->
-       <!--HTML en dessous est pour le style checkbox pris sur ce site: https://getcssscan.com/css-checkboxes-examples--> 
-       <div class="checkbox-wrapper-32">
-        <input type="checkbox" name="checkbox-32" id="checkbox-32">
-        <label for="checkbox-32">
-          Mute
-        </label>
-        <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-          <path d="M 10 10 L 90 90" stroke="#000" stroke-dasharray="113" stroke-dashoffset="113"></path>
-          <path d="M 90 10 L 10 90" stroke="#000" stroke-dasharray="113" stroke-dashoffset="113"></path>
-        </svg>
+       <!--HTML en dessous est pour le style checkbox pris sur ce site: https://getcssscan.com/css-checkboxes-examples-->
+       <div class="settings">
+        <button class="reset">Réinitialiser</button>
+        <div class="checkbox-wrapper-32">
+          <input type="checkbox" name="checkbox-32" id="checkbox-32">
+          <label for="checkbox-32">
+            Mute
+          </label>
+          <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+            <path d="M 10 10 L 90 90" stroke="#000" stroke-dasharray="113" stroke-dashoffset="113"></path>
+            <path d="M 90 10 L 10 90" stroke="#000" stroke-dasharray="113" stroke-dashoffset="113"></path>
+          </svg>
+        </div>
+
       </div>
-      
+  </div>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
