--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
+  
     <div class="game">
-
+      
         <div class="logo"><img src="assets/images/essaie-titre-3.png" alt=""></div> <!--<h1>Projet: Ultimata</h1>-->
         <div class="chapter"><h2>Valzer di Coppelia</h2></div>
         <div class="image"><img class="situation" src="assets/images/2b_jungle.jpg" alt=""></div>
@@ -22,8 +23,8 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
         </div>
 
-        <div class="button">
-        </div>
+        <div class="button"></div>
+        
        <!-- <div><label for="">Mute</label><input type="checkbox" name="" id="mute" class="checkbox"></div>-->
        <!--HTML en dessous est pour le style checkbox pris sur ce site: https://getcssscan.com/css-checkboxes-examples-->
        <div class="settings">
@@ -41,6 +42,7 @@
 
       </div>
   </div>
+  <div class="bg"></div>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
