--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="author" content="Kenza El Harrif">
     <title>Ultimata Demo</title>
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/fx-logo.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
@@ -14,7 +16,7 @@
   
     <div class="game">
       
-        <div class="logo"><img src="assets/images/essaie-titre-3.png" alt=""></div> <!--<h1>Projet: Ultimata</h1>-->
+        <div class="environment"> <h1 class="hero glitch layers" data-text="Projet Ultimata"><span>Projet Ultimata</span></h1></div>  <!--<h1>Projet: Ultimata</h1>-->
         <div class="chapter"><h2>Valzer di Coppelia</h2></div>
         <div class="image"><img class="situation" src="assets/images/2b_jungle.jpg" alt=""></div>
         <div class="video"><video src="" class="hidden" id="situationVideo" loop muted></video></div>
@@ -29,15 +31,12 @@
        <!--HTML en dessous est pour le style checkbox pris sur ce site: https://getcssscan.com/css-checkboxes-examples-->
        <div class="settings">
         <button class="reset">Réinitialiser</button>
-        <div class="checkbox-wrapper-32">
+
+        <div class="checkbox">
           <input type="checkbox" name="checkbox-32" id="checkbox-32">
           <label for="checkbox-32">
             Mute
           </label>
-          <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-            <path d="M 10 10 L 90 90" stroke="#000" stroke-dasharray="113" stroke-dashoffset="113"></path>
-            <path d="M 90 10 L 10 90" stroke="#000" stroke-dasharray="113" stroke-dashoffset="113"></path>
-          </svg>
         </div>
 
       </div>
