changements titre html

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   
     <div class="game">
       
-        <div class="environment"> <h1 class="hero glitch layers" data-text="Projet Ultimata"><span>Projet Ultimata</span></h1></div>  <!--<h1>Projet: Ultimata</h1>-->
-        <div class="chapter"><h2>Valzer di Coppelia</h2></div>
+        <div class="environment"> <h1 class="hero glitch layers" data-text="Projet: Ultimata"><span>Projet: Ultimata</span></h1></div>  <!--<h1>Projet: Ultimata</h1>-->
+        <div class="chapter"><h2></h2></div>
         <div class="image"><img class="situation" src="assets/images/2b_jungle.jpg" alt=""></div>
         <div class="video"><video src="" class="hidden" id="situationVideo" loop muted></video></div>
 
